--- a/packages/preamble.sty
+++ b/packages/preamble.sty
@@ -17,6 +17,7 @@
 \usepackage{subcaption}
 \usepackage{caption}
 \usepackage{float}
+\usepackage{amsmath}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
